Started reworking how quick fixes are implemented, so that they replace the expressions in the AST, not the editor nodes in the GUI.